--- a/css/digitalart.css
+++ b/css/digitalart.css
@@ -128,7 +128,7 @@ body {
   margin: 0rem 0 4rem 0;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  width: 80%;
+  width: 60%;
   align-items: center;
   justify-content: flex-start;
   position: fixed;
@@ -145,7 +145,7 @@ body {
 
 .navbar {
   display: flex;
-  width: 80%;
+  width: 60%;
   margin-top: 3rem;
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -181,8 +181,8 @@ body {
 }
 
 .main-flex-container {
-  margin-top: 12rem;
-  width: 80%;
+  margin: 12rem 0;
+  width: 60%;
   height: auto;
   font-size: 1.4rem;
   line-height: 2.2rem;
