--- a/css/index.css
+++ b/css/index.css
@@ -128,7 +128,7 @@ body {
   margin: 0rem 0 4rem 0;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  width: 80%;
+  width: 60%;
   align-items: center;
   justify-content: flex-start;
   position: fixed;
@@ -144,13 +144,13 @@ body {
 }
 
 .name_container {
-  margin-top: 3rem;
+  margin-top: 7rem;
   padding-top: 3rem;
   display: flex;
-  width: 80%;
+  width: 60%;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-wrap: nowrap;
 }
 
@@ -205,7 +205,7 @@ body {
   align-items: center;
   justify-content: flex-start;
   flex-wrap: nowrap;
-  width: 35%;
+  width: 100%;
   text-decoration: none;
   color: #311e18;
 }
@@ -222,16 +222,10 @@ body {
   vertical-align: middle;
 }
 
-.name_container img {
-  max-width: 187px;
-  height: auto;
-  border-radius: 10px;
-}
-
 .projects {
-  margin-top: 4rem;
+  margin-top: 10rem;
   display: flex;
-  width: 80%;
+  width: 60%;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
