Updated colors and added project title on index

--- a/css/about.css
+++ b/css/about.css
@@ -116,7 +116,7 @@ body {
 }
 
 .red {
-  color: #b81104;
+  color: #f31200;
 }
 
 .bold {
@@ -136,7 +136,7 @@ body {
 .header_link a {
   font-family: "goodfish_rg", sans-serif;
   font-size: 1.6rem;
-  color: #b81104;
+  color: #f31200;
   text-decoration: none;
   font-weight: 400;
 }
@@ -175,7 +175,7 @@ body {
 }
 
 #about a {
-  color: #b81104;
+  color: #f31200;
 }
 
 .main-container {
