--- a/css/hearth.css
+++ b/css/hearth.css
@@ -118,7 +118,7 @@ body {
 }
 
 .red {
-  color: #b81104;
+  color: #f31200;
 }
 
 .bold {
@@ -139,7 +139,7 @@ body {
 .header_link a {
   font-family: "goodfish_rg", sans-serif;
   font-size: 1.6rem;
-  color: #b81104;
+  color: #f31200;
   text-decoration: none;
   font-weight: 400;
 }
@@ -254,7 +254,7 @@ body {
 }
 
 .row-info-50 li {
-  color: #b81104;
+  color: #f31200;
 }
 
 .row-info-50 li span {
