--- a/css/index.css
+++ b/css/index.css
@@ -117,7 +117,7 @@ body {
 }
 
 .red {
-  color: #b81104;
+  color: #f31200;
 }
 
 .bold {
@@ -138,7 +138,7 @@ body {
 .header_link a {
   font-family: "goodfish_rg", sans-serif;
   font-size: 1.6rem;
-  color: #b81104;
+  color: #f31200;
   text-decoration: none;
   font-weight: 400;
 }
@@ -186,7 +186,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   font-weight: normal;
-  color: #311e18;
+  color: #7d7d7d;
 }
 
 .name_link_container {
@@ -238,6 +238,13 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+}
+
+.projects_title {
+  width: 100%;
+  font-family: "goodfish_rg", serif;
+  font-size: 5.2rem;
+  margin-bottom: 1rem;
 }
 
 .projects .project_1_container .project_1_header {
